tests/regression/errors/basic/import_error_7.csd
// Import error test 7
yeet "nonexistent_module_7"
sus result drip = some_function(7)
